// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base type generation ComplexBase iteration: 0 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    69646,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 1 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    42847,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 2 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    55131,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 3 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    49111,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 4 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    98076,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 5 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    57969,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 6 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    39211,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 7 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    62731,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 8 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    43857,
    Array [],
  ],
]
`;

exports[`Base type generation ComplexBase iteration: 9 1`] = `
Array [
  7,
  4,
  3,
  2,
  5,
  Array [
    69475,
    Array [],
  ],
]
`;
